# BattleTanksXD.PC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
res/: win_res.rc
src/game/windows/: main.cpp  main.hpp
