# // ------------------------------------------------------------------------------
#
# BattleTanks.XD PC
#
# License: see "LICENSE" file.
#
# // ------------------------------------------------------------------------------

# =================================================================================
# CMake Meta-Data
# =================================================================================

cmake_minimum_required(VERSION 3.5)

# =================================================================================
# PROJECT
# =================================================================================

# Project Name
set ( PROJECT_NAME "BattleTanksXD.PC" )

# Project Version
set ( PROJECT_VERSION 0.1.0 )

# Project Description
set ( PROJECT_DESCRIPTION "BattleTanksXD - 2D Top-Down Arcade Game." )

# Configure Project
project ( PROJECT_NAME VERSION ${PROJECT_VERSION} DESCRIPTION PROJECT_DESCRIPTION LANGUAGES C CXX )

# C++ Version
set ( CMAKE_CXX_STANDARD 11 )
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

# =================================================================================
# OPTIONS & CONFIGS
# =================================================================================



# =================================================================================
# HEADERS
# =================================================================================

set ( BTXD_HEADERS "src/game/windows/main.hpp" )

# =================================================================================
# SOURCES
# =================================================================================

set ( BTXD_SOURCES "src/game/windows/main.cpp" )

# =================================================================================
# RESOURCES
# =================================================================================

set ( BT_GAME_RESOURCES "res/win_res.rc" )

# =================================================================================
# MODULES
# =================================================================================



# =================================================================================
# BUILD
# =================================================================================

add_executable( BattleTanksXD ${BTXD_HEADERS} ${BTXD_SOURCES} ${BT_GAME_RESOURCES} )